<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:shadowRadius="2"
        android:shadowColor="#000000"
        android:textColor="@color/titleColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_critical_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/critical_level" />

        <TextView
            android:id="@+id/tv_critical_level_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_change_critical_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_change_critical_level"
        android:backgroundTint="@color/black" />

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="bottom">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingVertical="10dp"
             android:paddingHorizontal="120dp"
             android:orientation="horizontal">

             <TextView
                 android:id="@+id/tv_max_volume"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/max_level"
                 android:textSize="14sp" />

             <TextView
                 android:id="@+id/tv_max_volume_result"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="end"
                 android:textSize="14sp" />

         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingVertical="10dp"
             android:paddingHorizontal="120dp"
             android:orientation="horizontal">

             <TextView
                 android:id="@+id/tv_current_volume"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/curr_level"
                 android:textSize="14sp" />

             <TextView
                 android:id="@+id/tv_current_volume_result"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="end"
                 android:textSize="14sp" />

         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingVertical="10dp"
             android:paddingHorizontal="100dp"
             android:orientation="horizontal">

             <TextView
                 android:id="@+id/tv_last_update"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/last_updated"
                 android:textSize="14sp" />

             <TextView
                 android:id="@+id/tv_last_update_result"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="end"
                 android:textSize="14sp" />

         </LinearLayout>

         <Button
             android:id="@+id/btn_measurement_history"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
             android:layout_gravity="center"
             android:text="@string/btn_measure_history"
             android:backgroundTint="@color/black" />

     </LinearLayout>

</LinearLayout>
